force-app/main/default/objects/SocialPost/fields/Motifs__c.field-meta.xml
<CustomField>
    <fullName>Motifs__c</fullName>
    <label>Motifs</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Typededemande__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Réclamations salles</fullName>
            </value>
            <value>
                <fullName>Réclamations divers</fullName>
            </value>
            <value>
                <fullName>Réclamations réservation</fullName>
            </value>
            <value>
                <fullName>Mon UGC</fullName>
            </value>
            <value>
                <fullName>UGC fidélité</fullName>
            </value>
            <value>
                <fullName>Support électronique</fullName>
            </value>
            <value>
                <fullName>Divers</fullName>
            </value>
            <value>
                <fullName>autres produits et services</fullName>
            </value>
            <value>
                <fullName>cinema ugc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>