force-app/main/default/objects/SocialPost/fields/Sous_Motifs__c.field-meta.xml
<CustomField>
    <fullName>Sous_Motifs__c</fullName>
    <label>Sous Motifs</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motifs__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>systeme inaccessible</fullName>
            </value>
            <value>
                <fullName>tarifs speciaux</fullName>
            </value>
            <value>
                <fullName>demande de confirmation</fullName>
            </value>
            <value>
                <fullName>reservation assistee</fullName>
            </value>
            <value>
                <fullName>reservation inexistante</fullName>
            </value>
            <value>
                <fullName>fonctionnement informatique</fullName>
            </value>
            <value>
                <fullName>annulation reservation</fullName>
            </value>
            <value>
                <fullName>reclamation viva l&#39;opera</fullName>
            </value>
            <value>
                <fullName>cartes ugc solo perimees</fullName>
            </value>
            <value>
                <fullName>ugc blue</fullName>
            </value>
            <value>
                <fullName>cartes 5/5+ perimees</fullName>
            </value>
            <value>
                <fullName>e-cartes 5/5+</fullName>
            </value>
            <value>
                <fullName>accueil salle</fullName>
            </value>
            <value>
                <fullName>projection</fullName>
            </value>
            <value>
                <fullName>confort, proprete</fullName>
            </value>
            <value>
                <fullName>securite</fullName>
            </value>
            <value>
                <fullName>programmation</fullName>
            </value>
            <value>
                <fullName>fonctionnement des bornes</fullName>
            </value>
            <value>
                <fullName>contenu inapproprie (films annonces, pub...)</fullName>
            </value>
            <value>
                <fullName>numerotation des places</fullName>
            </value>
            <value>
                <fullName>autres</fullName>
            </value>
            <value>
                <fullName>renseignements inscription</fullName>
            </value>
            <value>
                <fullName>demande desinscription</fullName>
            </value>
            <value>
                <fullName>probleme inscription</fullName>
            </value>
            <value>
                <fullName>reclamation autre</fullName>
            </value>
            <value>
                <fullName>jeux</fullName>
            </value>
            <value>
                <fullName>renvoi courriel activation</fullName>
            </value>
            <value>
                <fullName>credit de points</fullName>
            </value>
            <value>
                <fullName>debit de points</fullName>
            </value>
            <value>
                <fullName>reclamations autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>