force-app/main/default/objects/SocialPost/fields/Typededemande__c.field-meta.xml
<CustomField>
    <fullName>Typededemande__c</fullName>
    <label>Type de demande</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autres demandes d&#39;informations</fullName>
            </value>
            <value>
                <fullName>Autres types de réclamations</fullName>
            </value>
            <value>
                <fullName>Demande d&#39;informations générales</fullName>
            </value>
            <value>
                <fullName>Média électroniques</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>